Started work on react-monorepo-compiler.

--- a/packages/react-monorepo-compiler/.gitignore
+++ b/packages/react-monorepo-compiler/.gitignore
@@ -6,8 +6,8 @@ build
 *.tgz
 lerna-debug.log
 npm-debug.log*
+package-lock.json
 yarn-debug.log*
 yarn-error.log*
 /.changelog
 .npm/
-packages/test-app
