--- a/packages/create-monorepo-app/package.json
+++ b/packages/create-monorepo-app/package.json
@@ -13,6 +13,7 @@
     "@types/ncp": "^2.0.1",
     "@types/node": "^12.0.8",
     "chalk": "^2.4.2",
+    "commander": "^2.20.0",
     "inquirer": "^6.3.1",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
