--- a/packages/create-monorepo-app/package.json
+++ b/packages/create-monorepo-app/package.json
@@ -19,6 +19,7 @@
     "ncp": "^2.0.0",
     "nodemon": "^1.19.1",
     "react-dev-utils": "^9.0.1",
+    "rimraf": "^2.6.3",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
@@ -26,5 +27,8 @@
     "build": "tsc",
     "dev": "nodemon",
     "prepare": "npm run build"
+  },
+  "devDependencies": {
+    "@types/rimraf": "^2.0.2"
   }
 }
