--- a/packages/create-monorepo-app/package.json
+++ b/packages/create-monorepo-app/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.8",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
+    "cross-spawn": "^6.0.5",
     "inquirer": "^6.3.1",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
@@ -29,6 +30,7 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.0",
     "@types/rimraf": "^2.0.2"
   }
 }
