--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -8,16 +8,43 @@
   },
   "scripts": {
     "build": "tsc",
+    "dev": "nodemon",
     "prepare": "npm run build"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/runtime": "^7.4.5",
+    "autoprefixer": "^9.6.0",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@types/autoprefixer": "^9.5.0",
+    "@types/clean-webpack-plugin": "^0.1.3",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/mini-css-extract-plugin": "^0.2.1",
     "@types/node": "^12.0.8",
     "@types/webpack": "^4.4.32",
-    "@types/webpack-dev-server": "^3.1.6"
+    "@types/webpack-dev-server": "^3.1.6",
+    "@types/webpack-merge": "^4.1.5",
+    "nodemon": "^1.19.1"
   }
 }
