--- a/packages/create-monorepo-template/package.json
+++ b/packages/create-monorepo-template/package.json
@@ -12,11 +12,13 @@
     "@types/ncp": "^2.0.1",
     "@types/node": "^12.0.8",
     "chalk": "^2.4.2",
+    "cross-spawn": "^6.0.5",
     "inquirer": "^6.3.1",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
     "nodemon": "^1.19.1",
     "react-dev-utils": "^9.0.1",
+    "rimraf": "^2.6.3",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
@@ -25,5 +27,8 @@
     "dev": "nodemon",
     "prepare": "npm run build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/cross-spawn": "^6.0.0",
+    "@types/rimraf": "^2.0.2"
+  }
 }
