--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "react-monorepo-compiler": "./bin/rmc.js"
   },
+  "types": "./react-env.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
@@ -21,17 +22,22 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
     "webpack-dev-server": "^3.7.1",
