--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -22,19 +22,27 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
+    "@types/jest": "^24.0.15",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
+    "@types/resolve": "^0.0.8",
     "autoprefixer": "^9.6.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
+    "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "react-app-polyfill": "^1.0.1",
+    "resolve": "^1.11.1",
     "style-loader": "^0.23.1",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
