--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -23,9 +23,11 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
     "@types/jest": "^24.0.15",
+    "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/resolve": "^0.0.8",
+    "@types/terser-webpack-plugin": "^1.2.1",
     "autoprefixer": "^9.6.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
@@ -36,14 +38,18 @@
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
+    "is-wsl": "^2.1.0",
     "jest": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
     "react-app-polyfill": "^1.0.1",
     "resolve": "^1.11.1",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.2",
