--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
+    "@types/fs-extra": "^7.0.0",
     "@types/jest": "^24.0.15",
     "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
     "@types/react": "^16.8.22",
@@ -33,10 +34,10 @@
     "babel-loader": "^8.0.6",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "fs-extra": "^8.0.1",
     "html-webpack-plugin": "^3.2.0",
     "is-wsl": "^2.1.0",
     "jest": "^24.8.0",
@@ -47,6 +48,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-safe-parser": "^4.0.1",
     "react-app-polyfill": "^1.0.1",
+    "react-dev-utils": "^9.0.1",
     "resolve": "^1.11.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
@@ -59,7 +61,6 @@
   },
   "devDependencies": {
     "@types/autoprefixer": "^9.5.0",
-    "@types/clean-webpack-plugin": "^0.1.3",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.1",
     "@types/node": "^12.0.8",
