--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -12,6 +12,11 @@
     "dev": "nodemon",
     "prepare": "npm run build"
   },
+  "files": [
+    "bin/**/*",
+    "react-env.d.ts",
+    "tsconfig.app.json"
+  ],
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
