--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
+    "@types/dotenv": "^6.1.1",
     "@types/fs-extra": "^7.0.0",
     "@types/jest": "^24.0.15",
     "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
@@ -40,10 +41,11 @@
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "css-loader": "^3.0.0",
+    "dotenv": "^8.0.0",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "fs-extra": "^8.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "is-wsl": "^2.1.0",
     "jest": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
