--- a/packages/create-monorepo-template/package.json
+++ b/packages/create-monorepo-template/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.10",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/utrolig/monorepo-tools",
+    "directory": "packages/create-monorepo-template"
+  },
   "bin": {
     "create-monorepo-template": "./bin/create.js"
   },
