--- a/packages/react-monorepo-compiler/tsconfig.app.json
+++ b/packages/react-monorepo-compiler/tsconfig.app.json
@@ -10,8 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "isolatedModules": false,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
     "baseUrl": "../",
