--- a/packages/react-monorepo-compiler/tsconfig.app.json
+++ b/packages/react-monorepo-compiler/tsconfig.app.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "preserve",
-    "baseUrl": "../",
+    "baseUrl": "../../",
     "paths": {
       "*": ["packages/*"]
     }
