--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -32,13 +32,24 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "autoprefixer": "^9.6.0",
+    "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
+    "eslint": "6.x",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "fs-extra": "^8.0.1",
@@ -56,8 +67,6 @@
     "resolve": "^1.11.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
-    "tslint": "^5.18.0",
-    "tslint-react": "^4.0.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
     "webpack-dev-server": "^3.7.1",
