--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -36,6 +36,7 @@
     "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-jsx-remove-data-test-id": "^2.0.0",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "css-loader": "^3.0.0",
