--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -51,6 +51,7 @@
     "jest": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -58,6 +59,8 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "resolve": "^1.11.1",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
@@ -68,6 +71,7 @@
   "devDependencies": {
     "@types/autoprefixer": "^9.5.0",
     "@types/dotenv": "^6.1.1",
+    "@types/eslint": "^6.1.2",
     "@types/fs-extra": "^7.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^24.0.15",
