--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -37,6 +37,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-jsx-remove-data-test-id": "^2.0.0",
+    "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "css-loader": "^3.0.0",
@@ -61,7 +62,7 @@
     "resolve": "^1.11.1",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
