--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-monorepo-compiler",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -44,21 +44,21 @@
     "chalk": "^2.4.2",
     "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
+    "eslint": "6.x",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "^3.0.0",
     "eslint-plugin-flowtype": "3.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react-hooks": "1.x",
     "eslint-plugin-react": "7.x",
-    "eslint": "6.x",
+    "eslint-plugin-react-hooks": "1.x",
     "file-loader": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "fs-extra": "^8.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "is-wsl": "^2.1.0",
-    "jest-watch-typeahead": "^0.3.1",
     "jest": "^24.8.0",
+    "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -67,15 +67,15 @@
     "postcss-safe-parser": "^4.0.1",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
-    "resolve-url-loader": "^3.1.0",
     "resolve": "^1.11.1",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
+    "webpack": "^4.34.0",
     "webpack-dev-server": "^3.7.1",
-    "webpack-merge": "^4.2.1",
-    "webpack": "^4.34.0"
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "@types/autoprefixer": "^9.5.0",
