--- a/packages/react-monorepo-compiler/package.json
+++ b/packages/react-monorepo-compiler/package.json
@@ -39,6 +39,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-jsx-remove-data-test-id": "^2.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
